A generic iri start script